tests/ui/demux/fails_on_empty_input_list.stderr
error: At least one variant is required
 --> $DIR/fails_on_empty_input_list.rs:4:5
  |
4 |     demux_with_error_handler!();
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
