tests/ui/demux/fails_on_empty_input_list.rs
use mux_stream_macros::demux_with_error_handler;

fn main() {
    demux_with_error_handler!();
}
